Write stats object

--- a/example-config.toml
+++ b/example-config.toml
@@ -6,3 +6,4 @@ want_playlist = "xxx"
 tracks_dir    = "/path/to/live"
 playlist_file = "/path/to/live/station.txt"
 liquid_socket = "/path/to/live/station.socket"
+stats_file    = "/var/www/xxx/stats.json"
